Fixed main background image path and header text alignment.

--- a/components/buttons/style.css
+++ b/components/buttons/style.css
@@ -63,18 +63,28 @@ h2 {
 #header-wrap{
 	background: #6AB47B;
 	border-top: 5px solid #4C8158;
+	text-align: center;
+	font-size: 1.2em;
 }
+
+#header a {
+	color: #fff;
+	text-decoration: none;
+}
+
+#header a:hover {
+	background: #DAF5E0;
+}
+
 
 /********** Navigation Styles **********/
 
 #main-nav {
-    float: right;
     display: inline-block;
     position: relative;
 }
 
 #main-nav li {
-	float:left;
 	text-decoration: none;
 	list-style: none;
 	display: inline-block;
@@ -86,10 +96,11 @@ h2 {
 
 #main-nav li:hover {
     background: #DAF5E0;
+    color: #4c8158;
 }
 
-#main-nav li:hover .sub-nav {
-	    display: block;
+#main-nav li:hover a {
+	color: #4c8158;
 }
 
 #main-nav li a {
@@ -98,43 +109,6 @@ h2 {
 	padding: 15px 20px;
     display: inline-block;
 }
-
-.sub-nav{
-	display: none;
-	position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    top: 100%;
-}
-
-.sub-nav li a {
-	min-width: 160px;
-    padding: 15px 20px;
-    display: inline-block;
-    padding: 0;
-    margin: 0;
-    float: none;
-    color: #000;
-}
-
-.sub-nav li a:hover {
-	border-left: 5px solid #6AB47B;
-	border-right: 5px solid #6AB47B;
-	-webkit-transition: all .2s linear;
-    -moz-transition: all .2s linear;
-    -o-transition: all .2s linear;
-    transition: all .2s linear;
-}
-
-#main-nav ul.sub-nav li:hover {
-	background: #fff;
-}
-
-#main-nav ul li:hover a{
-		color: #333;
-}
-
 /********** Main Content Styles **********/
 
 .page-title-wrap{
@@ -157,7 +131,7 @@ h2 {
 }
 
 #main-wrap{
-	background: url(landscape-2.jpg) no-repeat center center fixed;
+	background: url(../../../images/landscape-2.jpg) no-repeat center center fixed;
 	min-height: 100vh;
 	padding: 0 0 5%;
 }
